# Git2Doc

./: .dockerignore  .gitignore  Dockerfile  README.md  content.txt  doc_creation.py  generate_project_workflow.py  git2doc.db  main.py  pyproject.toml  requirements.txt  run_backend.sh  test_github_tools.py  workflow.json  workflow.py
UI/: index.html  package-lock.json  package.json  tailwind.config.ts
UI/src/: App.tsx  index.css
UI/src/components/codo/: FeaturesSection.tsx  FooterSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  PricingSection.tsx  SamplePreviewSection.tsx  Scene3D.tsx
UI/src/hooks/: useAuth.tsx
UI/src/lib/: api.ts
UI/src/pages/: Dashboard.tsx  Index.tsx  Login.tsx  Pricing.tsx  Signup.tsx
UI/src/services/: articlesService.ts  authService.ts  documentsService.ts
api/: __init__.py  database.py  main.py  models.py  seed.py
api/middleware/: auth_middleware.py
api/routers/: articles.py  auth.py  documents.py
api/services/: doc_generator.py
api/utils/: jwt_handler.py  password.py
storage/documents/1/: input.txt
storage/documents/2/: input.txt
storage/documents/3/: input.txt
